refactor(powerline): 重构电力线设计中的分层模式和手工结构模式
- 将 Legacy layers 重命名为 Layer mode，相关常量和方法名同步更新
- 新增 isLayerMode() 和 isManualStructureMode() 方法替代旧的 isManualLegacyMode()
- 更新 UI 中的结构模式单选按钮和显示文本
- 修正 TowerArmAttachmentBinding 中分层模式的高度